# tfrulecheck

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc.prerelease.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.tf
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  entrypoint.sh
.github/: dependabot.yml  release.bash
.github/workflows/: docker_build.yml  docs.yml  pypi.yml  release.yml  validate.yml
_sources/: index.rst.txt
_sources/code/: index.rst.txt  main.rst.txt  tffile.rst.txt  tfpaths.rst.txt
_sources/users/: forcedremotesource.rst.txt  index.rst.txt  moveddate.rst.txt  precommit.rst.txt  swapsource.rst.txt
code/: index.html  main.html  tffile.html  tfpaths.html
docs/source/: conf.py  index.rst
docs/source/code/: main.rst  tffile.rst  tfpaths.rst
docs/source/users/: forcedremotesource.rst  importdate.rst  moveddate.rst  precommit.rst  swapsource.rst
src/tfutility/: __init__.py  main.py
src/tfutility/controllers/: blockdate.py  forcedremotesource.py  sourceswap.py
src/tfutility/core/: abstract.py  base.py  exp.py  tffile.py  tfpaths.py
src/tfutils/: main.py
src/tfutils/contrib/: deprecation.py
src/tfutils/controllers/: blockdate.py  forcedremotesource.py  importdate.py  remotesource.py  sourceswap.py
src/tfutils/core/: abstract.py  argparse.py  base.py  exp.py  tfdecorator.py  tfdecorator.pyfoo  tffile.py  tfparse.py  tfpaths.py
testcode/: main.tf
tests/: test_cli.py  test_core_abstract.py  test_core_base.py  test_core_tfparse.py  test_core_tfpaths.py
tests/testcode/: main.tf
tfrulecheck/: __main__.py  cli.py  controller.py  main.py
tfrulecheck/checker/: __init__.py  base.py  remotesource.py
users/: forcedremotesource.html  importdate.html  index.html  moveddate.html  precommit.html  swapsource.html
